fix: gate arkade to evm htlc version
